fix too large search input in compact style

--- a/less/base/_datatables.less
+++ b/less/base/_datatables.less
@@ -153,4 +153,8 @@
     padding-right: @spacing-sm;
     height: 3.5em;
   }
+
+  .upf-datatable__search {
+    width: inherit;
+  }
 }
